# Qt-Projects

Demo/: CMakeLists.txt
Login/: CMakeLists.txt  CMakeLists.txt.user.06ee454  CMakeLists.txt.user.d860987  mainwindow.cpp  mainwindow.h  mainwindow.ui  style.qss
LoginForm/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Nhap/: CMakeLists.txt  authmanager.cpp  basewidget.h  loginwidget.cpp  loginwidget.h
build-Login-Desktop_Qt_5_13_2_GCC_64bit-Debug/: CMakeCache.txt  Login  Login.cbp  Makefile  cmake_install.cmake
build-Login-Desktop_Qt_5_13_2_GCC_64bit-Debug/Login_autogen/EWIEGA46WW/: moc_mainwindow.cpp  qrc_resources.cpp
build-Login-Desktop_Qt_5_13_2_GCC_64bit-Debug/Login_autogen/include/: ui_mainwindow.h
nhap/: CMakeLists.txt
test/: CMakeLists.txt
